# nonebot-plugin-steam-info

./: .env.test  .gitignore  README.md  justfile  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  release.yml
memory-bank/: activeContext.md  dataStorage.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
memory-bank/tasks/: TASK001-restructure-plugin.md  TASK002-steam-api-rate-limit-optimization.md  TASK003-data-layer-hardening.md  TASK004-avatar-cache-update.md  _index.md
scripts/: measure_origin_layout.py  preview_render.py
src/nonebot_plugin_steam_info/: __init__.py  config.py  migration.py
src/nonebot_plugin_steam_info/bot/: __init__.py  nonebot_utils.py  service.py
src/nonebot_plugin_steam_info/bot/handlers/: __init__.py  bind.py  broadcast.py  cache.py  check.py  help.py  info.py  nickname.py  parent.py  scheduled.py
src/nonebot_plugin_steam_info/core/: data_models.py  models.py
src/nonebot_plugin_steam_info/infra/: data_source.py  draw.py  html_render.py  html_render_common.py  htmlrender_render.py  render.py  steam_api.py  steam_client.py  steam_state.py  stores.py  utils.py
src/nonebot_plugin_steam_info/res/templates/: friends_status.html  start_gaming.html
tests/: plugin_test.py  test_avatar_cache.py  test_cache.py  test_migration.py  test_nickname_rendering.py  test_nonebot_utils.py  test_rate_limit.py  test_render_mode.py  test_scheduled.py  test_stores.py
